# nonebot-starter

./: .gitignore  README.md  pyproject.toml  timetable.json
plugins/: timetable.py
